Avoid dereferencing the first value in an empty string list

a TagLib::PropertyMap returns a StringList as a value, but checking
if the map contains the key, is not sufficient to ensure the string
list is not empty.

Also, optimize a bit to avoid additional conversions to TagLib::String

BUG: 446551
FIXED-IN: 3.4.3